snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.095327-2.module.sha256
465bcbc7f587b223901388cd57992f36c10b8570def57ccb97ac505b3d57da12